--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My JavaScript Mission</h1>
-    <script src="./condition.js"></script>
+    <script src="./script.js"></script>  
 </body>
 </html>
